--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
-streamlit
-pandas
-numpy
-matplotlib
-plotly
-seaborn
-biopython
-dna_features_viewer
-scikit-bio
-altair
-bokeh
-pyvis
-joblib
-tqdm
-psutil
-scikit-learn
-seaborn
-requests
-torch
+# GUI and Interface
+ttkbootstrap>=1.10.1
+tkinter-tooltip>=2.1.0
+
+# Scientific Computing and Visualization
+matplotlib>=3.5.0
+numpy>=1.21.0
+seaborn>=0.11.0
+
+# Bioinformatics
+biopython>=1.79
+dna-features-viewer>=3.1.0
+
+# Additional Libraries (if you add the Streamlit version)
+streamlit>=1.28.0
+plotly>=5.15.0
+pandas>=1.5.0
+
+# Optional AI/ML Features (if implemented)
+transformers>=4.21.0
+torch>=1.12.0
+
+# File Handling and Data
+openpyxl>=3.0.9
+xlsxwriter>=3.0.3
+
+# Web Scraping (if needed for database access)
+requests>=2.28.0
+beautifulsoup4>=4.11.0
+
+# Development and Testing (optional)
+pytest>=7.0.0
+black>=22.0.0
+flake8>=5.0.0
