--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,14 @@
-# Core Streamlit and UI
-streamlit>=1.28.0
-plotly>=5.15.0
-pandas>=1.5.0
-
-# Scientific Computing and Visualization  
-matplotlib>=3.5.0
-numpy>=1.21.0
-seaborn>=0.11.0
-
-# Bioinformatics
-biopython>=1.79
-
-# Optional but recommended
-dna-features-viewer>=3.1.0
-transformers>=4.21.0
-torch>=1.12.0
-requests>=2.28.0
-
-# File handling
-openpyxl>=3.0.9
-xlsxwriter>=3.0.3
+streamlit
+pandas
+numpy
+matplotlib
+seaborn
+plotly
+biopython
+dna_features_viewer
+py3dmol
+stmol
+transformers
+torch
+biotite
+requests
