--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,18 @@
-# Core Streamlit and UI
 streamlit>=1.28.0
 plotly>=5.15.0
 pandas>=1.5.0
-
-# Scientific Computing and Visualization  
 matplotlib>=3.5.0
 numpy>=1.21.0
 seaborn>=0.11.0
-
-# Bioinformatics
 biopython>=1.79
-
-# Advanced Visualization (Optional but recommended)
 dna-features-viewer>=3.1.0
 stmol>=0.9.0
 py3dmol>=1.2.0
-
-# AI/ML Features (Optional)
 transformers>=4.21.0
 torch>=1.12.0
-
-# Utility Libraries
 requests>=2.28.0
-beautifulsoup4>=4.11.0
 openpyxl>=3.0.9
 xlsxwriter>=3.0.3
-
-# File handling
 Pillow>=8.0.0
+beautifulsoup4>=4.11.0
+scipy>=1.9.0
