--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-streamlit>=1.28.0
-plotly>=5.15.0
-pandas>=1.5.0
-matplotlib>=3.5.0
-numpy>=1.21.0
-seaborn>=0.11.0
-biopython>=1.79
-dna-features-viewer>=3.1.0
-stmol>=0.9.0
-py3dmol>=1.2.0
-transformers>=4.21.0
-torch>=1.12.0
-requests>=2.28.0
-openpyxl>=3.0.9
-xlsxwriter>=3.0.3
-Pillow>=8.0.0
-beautifulsoup4>=4.11.0
-scipy>=1.9.0
+streamlit
+plotly
+pandas
+matplotlib
+numpy
+seaborn
+biopython
+dna-features-viewer
+stmol
+py3dmol
+transformers
+torch
+requests
+openpyxl
+xlsxwriter
+Pillow
+beautifulsoup4
+scipy
